--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,20 @@
 @charset "utf-8";
 
+/*-------------------  common -------------------*/
+
 body {
 	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+	text-align: center;
 }
 
-/*------------------ header---------------------*/
-
-  header {
-      padding: 5px 5px;
-      position: fixed;
-      background-color: white;
-      opacity: 0.9;
+/*------------------- スマホ版でのメニュー表示 ----------------*/
+@media(max-width:600px) {
+  .pc-gnav{
+    display: none;
   }
-
-/* スマホ版でのメニュー表示 */
-@media screen and (min-width:420px){
   
   .m-menu {
-      top: 0px;
-      right: 0px;
+    position: fixed;
   }
   
   .m-menu {
@@ -27,96 +23,92 @@ body {
     cursor: pointer;
   }
 
-  
-  .pc-gnav{
-    display: none;
-  }
-  
-
   .m-menu #open.hide {
     display: none;
   }
   
-.overlay {
-  position: fixed;
-  top:0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background-color: rgba(255, 255, 255, 0.9);
-  text-align: center;
-  padding: 64px;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.5s;
-}
-
-.overlay.show{
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.overlay m-menu {
-  padding: 5px 5px;
-}
-
-.overlay #close {
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  font-size: 32px;
-  cursor: pointer;
-}
-
-.overlay ul {
-  list-style-type: none;
-  font-weight: bold;
-  margin: 0;
-  padding: 0;
-}
-
-.overlay li {
-  margin-top: 24px;
-  opacity: 0;
-  transform: translateY(16px);
-  transition: opacity 0.3s, transform 0.3s;
-  text-align: center;
-}
-
-.overlay.show li {
-  opacity: 1;
-  transform: none;
-}
-
-.overlay a:hover {
-  background: #007700;
-  color: white;
-}
-
-
-/*---スマホのドロップダウンメニュー ---*/
-
-.gnav2 li li ul {
-  overflow: hidden ;
-  transition: 0.5s;
-}
-
-.gnavav2 li li link:hover > li > a {
-  overflow: visible;
-  margin: 0;
-}
-
-}
-/* --------------PC版画面でのメニュー表示 ------------*/
-
-@media(mix-width: 421px) {
-  body {
+  .overlay {
+    position: fixed;
+    top:0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    text-align: center;
+    padding: 64px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s;
+  }
+  
+  .overlay.show{
+    opacity: 1;
+    pointer-events: auto;
+  }
+  
+  .overlay m-menu {
+    padding: 5px 5px;
+  }
+  
+  .overlay #close {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    font-size: 32px;
+    cursor: pointer;
+  }
+  
+  .overlay ul {
+    list-style-type: none;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .overlay li {
+    margin-top: 24px;
+    padding: 5px;
+    opacity: 0;
+    transform: translateY(16px);
+    transition: opacity 0.3s, transform 0.3s;
     text-align: center;
   }
+  
+  .overlay.show li {
+    opacity: 1;
+    transform: none;
+  }
+  .overlay ul li a {
+    text-decoration: none;
+    color: #007700;
+  }
+
+  .overlay a:hover {
+    border-bottom: solid 2px #007700;
+    transform: 0.3s;
+  }
+  
+  
+  .gnav2 li li ul {
+    overflow: hidden ;
+    transition: 0.5s;
+  }
+  
+  .gnavav2 li li link:hover > li > a {
+    overflow: visible;
+    margin: 0;
+  }
+}
+
+/* --------------PC版画面でのメニュー表示 ------------*/
+@media (min-width:601px){
   .m-menu{
     display: none;
   }
-
+  
+  .overlay {
+    display: none;
+  }
   
   .pc-gnav {
     display: flex;
@@ -128,61 +120,60 @@ body {
     background-color: #EEEEEE;
     opacity: 0.9;
   }
-
-.pc-gnav ul {
+  
+  .pc-gnav ul {
   display: flex;
   margin: 0;
   padding: 0;
   list-style-type: none;
-}
-
-.pc-gnav li ul {
-  flex-direction: column !important;
-  height: 0;
-}
-
-
-.pc-gnav a {
-  display: block;
-  margin: auto;
-  padding: 20px 20px;
-  white-space: nowrap;
-  text-decoration: none;
-  font-weight: bold;
-  color: #007700;
-}
-
-.pc-gnav a:hover {
-  background: #007700;
-  color: white;
-  text-decoration: none;
-}
-
-/*---pc版ドロップダウンメニュー---*/
-
-.pc-gnav li li {
-  height: 60px;
-  overflow: hidden;
-  transition: 0.5s;
-  background: #EEEEEE !important;
-}
-
-.pc-gnav li:hover > ul > li{
-  background: white;
-  overflow: visible;
-}
+  }
+  
+  .pc-gnav li ul {
+    flex-direction: column !important;
+    height: 0;
+  }
+  
+  .pc-gnav a {
+    display: block;
+    margin: 0 auto;
+    padding: 15px 30px;
+    white-space: nowrap;
+    text-decoration: none;
+    font-weight: bold;
+    color: #007700;
+  }
+  
+  .pc-gnav a:hover {
+    background: #007700;
+    color: white;
+    text-decoration: none;
+  }
+  
+/* pc版ドロップダウンメニュー */
+  
+  .pc-gnav li li {
+    height: 60px;
+    overflow: hidden;
+    transition: 0.5s;
+    background: #EEEEEE !important;
+  }
+  
+  .pc-gnav li:hover > ul > li{
+    background: white;
+    overflow: visible;
+  }
 
 }
 
 /*------------------ main1(博多の風景、Welcome文) ---------------------*/
-
-#txt_animation{
+#txt_animation {
+  margin-top: 30px;
   height: 300px;
 }
 
 .hakata {
-    width: 700px;
-    height: 400px;
+    width: 500px;
+    height: 300px;
     display: inline-block;
     margin-top: 130px;
     margin-bottom: 25px;
@@ -193,6 +184,9 @@ body {
   color: #006600;
 }
 
+.second {
+  margin-top: 30px;
+}
 
 /*--------- それぞれのコンテンツの見出しの文字 ---------------*/
 .h {
@@ -200,7 +194,6 @@ body {
   font-weight: bold;
   font-size: 36px;
 }
-
 
 /*--------------------  このサイトについて  ---------------------*/
 #site {
@@ -257,7 +250,6 @@ body {
 }
 
 /*--------------------　自分のスキルについて　---------------------*/
-
 #skill {
   margin-bottom: 150px;
 }
@@ -276,7 +268,6 @@ body {
 }
 
 /*--------------------　プロフィールについて　---------------------*/
-
 #profile {
   margin-bottom: 150px;
 }
@@ -286,7 +277,6 @@ body {
 }
 
 /*--------------------　趣味について　---------------------*/
-
 #hobby {
   margin-bottom: 150px;
 }
@@ -298,7 +288,6 @@ body {
 }
 
 /*--------------------　連絡先について　---------------------*/
-
 .hw {
   font-weight: bold;
   font-size: large;
@@ -319,7 +308,6 @@ body {
   margin: 30px 0;
   all: unset;
   border-bottom: 1px solid #aaa;
-  padding: 4px;
   width: 500px;
 }
 
@@ -328,7 +316,6 @@ body {
 }
 
 /*------------------ クリックしたら Top画面に戻る部分---------------------*/
-
 #back {
   line-height: 80px;
   background: #99CC00;
@@ -357,7 +344,6 @@ span.material-icons {
   font-weight: bold;
   color: #FFFFFF;
 }
-
 
 /*------------------ footer ---------------------*/
 footer {
