--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 /*------------------- スマホ版でのメニュー表示 ----------------*/
-@media(max-width:500px) {
+@media(max-width:450px) {
   .pc-gnav{
     display: none;
   }
@@ -110,7 +110,7 @@ body {
 }
 
 /* --------------PC版画面でのメニュー表示 ------------*/
-@media (min-width:601px){
+@media (min-width:501px){
   .m-menu{
     display: none;
   }
@@ -357,22 +357,38 @@ a .box:hover {
 .mail {
   width: 150px;
   height: 150px;
-  margin-top: 15px;
-  margin-bottom: 30px
+  margin-top: 20px;
+  margin-bottom: 35px
 }
 
 #contact form {
-  margin: 30px 0;
+  margin-top: 40px;
 }
+
 #contact input {
-  margin: 30px 0;
   all: unset;
   border-bottom: 1px solid #aaa;
-  width: 500px;
+  width: 300px;
+  margin: 10px;
+}
+
+#contact form p {
+  margin-top: 50px;
+  font-size: large;
+}
+
+form textarea {
+  width: 370px;
+  margin-top: 10px; 
 }
 
 #btn {
-  margin: 30px 0;
+  margin: 50px;
+}
+
+#btn:hover {
+  color: #fff;
+  background-color: #008000;
 }
 
 /*------------------ クリックしたら Top画面に戻る部分---------------------*/
@@ -389,7 +405,7 @@ span.material-icons {
 #back span.material-icons a {
   font-size: 50px;
   text-decoration: none;
-  color: #005500;
+  color: #008000;
 }
 
 #back span.material-icons a:hover {
@@ -400,7 +416,7 @@ span.material-icons {
 #back p {
   padding-bottom: 50px;
   margin: 0;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: bold;
   color: #FFFFFF;
 }
