--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ div #slider {
   position: absolute;
   top: 0;
   border: 0;
-  width: 400px;
+  width: 390px;
   height: 240px;
   border-radius: 15px;
 }
@@ -385,12 +385,13 @@ a .box:hover {
   margin-bottom: 150px;
 }
 
-.cook {
-  box-shadow: 0 0 10px #444444;
-  width: 350px;
-  height: 250px;
-  margin-top: 25px;
+#fadein_fadeout img {
+  width: 370px;
+  height: 280px;
+  margin-top: 15px;
   margin-bottom: 50px;
+  box-shadow: 0 0 10px #444444;
+  border-radius: 20px;
 }
 
 /*--------------------　連絡先について　---------------------*/
@@ -425,7 +426,8 @@ a .box:hover {
 
 form textarea {
   width: 300px;
-  margin-top: 10px; 
+  margin-top: 10px;
+  border-radius: 5px;
 }
 
 #btn {
