--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,19 @@ div #slider {
 .content {
   padding-top: 100px;
   margin-top: -100px;
+
+  /* 最初は非表示 */
+  opacity: 0;
+  visibility: hidden;
+  transform: translate(0, 40px);
+  transition: opacity 1s, visibility 1s, transform 1s;
+}
+
+/* jQueryで各contentクラスの要素をフェードインさせるためのクラス*/
+.is-fadein {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0, 0);
 }
 
 /* 文字の位置や大きさについて */
@@ -258,6 +271,7 @@ div #slider {
 #site {
   margin-top: 10px;
   margin-bottom: 170px;
+  
 }
 
 #hs {
@@ -273,15 +287,22 @@ div #slider {
     box-shadow: 0 0 10px #444444;
 }
 
+
 /*--------------------　自分について　---------------------*/
 #me {
   margin-bottom: 250px;
 }
 
 .hm {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: bold;
   font-size: 30px;
+}
+
+.myface {
+  width: 100px;
+  height: 120px;
+  margin-bottom: 30px;
 }
 
 #git {
@@ -355,10 +376,11 @@ a .box:hover {
 }
 
 #skill .tech {
-  width: 300px;
+  width: 390px;
   height: 200px;
   margin-top: 30px;
   margin-bottom: 50px;
+  border-radius: 10px;
   box-shadow: 0 0 10px #444444;
 }
 
