--- a/css/style.css
+++ b/css/style.css
@@ -379,8 +379,8 @@ a .box:hover {
 
 #modal {
   background: #fff;
-  width: 370px;
-  padding: 40px 20px;
+  width: 90%;
+  padding: 40px 30px;
   border-radius: 10px;
   position: fixed;
   top: 230px;
@@ -402,6 +402,8 @@ a .box:hover {
 
 #modal a:hover {
   border-bottom: 2px solid #007700;
+  font-weight: bold;
+  color: #007700;
 }
 
 #close_2 {
