--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html {
   width: 100vw;
 }
 body {
-	font-family: cursive;
+	font-family: "monospace", "メイリオ", "ヒラギノ角ゴ Pro", sans-serif;
 	width: 100vw;
 	font-size: 14px;
 }
@@ -188,7 +188,7 @@ div #wrapper {
 }
 
 div #slider {
-  width: 400px;
+  width: 370px;
   height: 240px;
   margin: 0 auto;
 }
@@ -202,7 +202,7 @@ div #slider {
   position: absolute;
   top: 0;
   border: 0;
-  width: 400px;
+  width: 370px;
   height: 240px;
   border-radius: 15px;
 }
@@ -274,6 +274,7 @@ div #slider {
     width: 300px;
     height: 200px;
     margin-top: 30px;
+    border-radius: 10px;
     box-shadow: 0 0 10px #444444;
 }
 
@@ -385,7 +386,7 @@ a .box:hover {
   padding: 40px 30px;
   border-radius: 10px;
   position: fixed;
-  top: 230px;
+  top: 160px;
   left: 0;
   right: 0;
   margin: 0 auto;
